--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,6 @@
 body {
     font-family: 'Raleway', sans-serif;
     background: #f2f2f2;
-    padding: 0;
-    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,6 +26,8 @@ body {
 
 .main-flex-container {
     grid-row: 4 / span 1;
+    grid-column: 2 / span 1;
+    width: 100%;
 }
 
 .standout {
@@ -35,7 +35,6 @@ body {
     border-radius: 1rem;
     border: 1px solid rgba(0,0,0,0.4);
     box-shadow: 1rem 1rem rgba(20,20,20,0.4);
-    width: fit-content;
 }
 
 .padded {
@@ -47,10 +46,10 @@ body {
 @media only screen and (max-width: 600px) {
     body {
         min-width: fit-content;
-        max-width: 430px;
+        max-width: 100vw;
     }
     .main-grid-container {
-        grid-template-columns: 100vw;
+        grid-template-columns: 1rem 1fr 1rem;
         justify-content: center;
         width: 100%;
         height: 100vh;
